# cookidoo-uploader

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cookidoo_uploader/: __init__.py  auth.py  cache.py  cli.py  client.py  config.py  errors.py  image.py  login.py  schema.py  userconfig.py
cookidoo_uploader/recipes/: __init__.py  chicken_tikka_masala.py  creamy_mushroom_pasta.py
docs/: auto-login-plan.md
example/: chicken-tikka-masala.md  creamy-mushroom-quorn-pasta.md  mushroom-risotto.md
scripts/: cookiput_mushroom_risotto.py  cookiput_mushroom_risotto_structured.py  cookiput_mushroom_risotto_v2.py  cookiput_mushroom_risotto_v3.py  cookiput_mushroom_risotto_v4.py  cookiput_mushroom_soup.py  create_chicken_tikka_masala_2portions.py  create_chicken_tikka_masala_corrected.py  create_chicken_tikka_masala_final.py  create_mushroom_risotto_2portions.py  create_mushroom_risotto_structured.py  get_cookidoo_cookie.py  update_mushroom_risotto_structured.py  upload_chicken_tikka_masala.py  upload_creamy_mushroom_pasta.py  upload_mushroom_risotto.sh  upload_recipe_image.py
tests/: test_client.py  test_image.py  test_login.py  test_recipes.py  test_schema.py  test_userconfig.py
